--- a/civics.html
+++ b/civics.html
@@ -43,9 +43,11 @@
 								<hr class="major" />
 
 
-								<h3>Save These Toolkit</h3>
-								<a href="/pdfs/genderidentity.pdf">For a PDF version of this toolkit, click here!</a>
+								<h3>Save This Toolkit</h3>
+								<a href="/pdfs/civics.pdf">For a PDF version of this toolkit, click here!</a>
 								<hr class="major" />
+								<p></p>
+								<a href="/pdfs/civicsprint.pdf">For a print friendly PDF version of this toolkit, click here!</a>
 								</section>
 
 
