--- a/civics.html
+++ b/civics.html
@@ -39,7 +39,7 @@
 								<hr class="major" />
 								<h3>Civics Toolkit for High School Students</h3>
 								<h3>Civics</h3>
-								<iframe src="https://drive.google.com/file/d/1OUwPc2KMaryX95FqsWODJphMcg1M4lXe/preview" width="640" height="480"></iframe>								
+								<iframe src="https://drive.google.com/file/d/1OUwPc2KMaryX95FqsWODJphMcg1M4lXe/preview" width="640" height="480"></iframe>
 								<hr class="major" />
 
 
@@ -74,11 +74,17 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="toolkit1.html">Toolkit 1</a></li>
-										<li><a href="toolkit2.html">Toolkit 2</a></li>
-										<li><a href="toolkit3.html">Toolkit 3</a></li>
+										<li>
+										<span class="opener">Gender Identity Toolkits</span>
+										<ul>
+											<li><a href="genderidentityYA.html">Young Adult Leaders</a></li>
+											<li><a href="genderidentityMS">Middle School Students</a></li>
+										</ul>
+										</li>
+										<li><a href="civics.html">Civics Toolkit</a></li>
+										<li><a href="drama.html">Drama Toolkit</a></li>
 										<li><a href="finalreport.html">Final Report</a></li>
-									</ul>
+										</ul>
 								</nav>
 
 
