--- a/civics.html
+++ b/civics.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Toolkit #2 by Tara Bradshaw</strong></a>
+									<a href="index.html" class="logo"><strong>Toolkit by Tara Bradshaw</strong></a>
 									<ul class="icons">
 
 									</ul>
