--- a/civicsprint.html
+++ b/civicsprint.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Toolkit #1 by Marisa Bateman</strong></a>
+									<a href="index.html" class="logo"><strong>Toolkit by Tara Bradshaw</strong></a>
 									<ul class="icons">
 										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -36,8 +36,8 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Gender Identity and Expression Training</h1>
-										<h2>Intended Age Group: 18 and Up, Resident Assistants, Teen Librarians, Camp Counselors, etc.</h2>
+										<h2>Stacey L. Kirby Toolkit: Civic Duty</h2>
+										<h3>Intended Age Group: 18 and Up, Resident Assistants, Teen Librarians, Camp Counselors, etc.</h3>
 									</header>
 
 
