--- a/civics.html
+++ b/civics.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Gender Identity and Civic Duty Toolkits</title>
+		<title>Civic Duty Toolkit</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
