--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 										<article>
 											<h3>Gender Identity Toolkits</h3>
 											<ul class="actions">
-												<li><a href="genderidentityYA.html" class="button primary">Young Adult Leaders</a></li>
-												<li><a href="genderidentityMS.html" class="button primary">Middle School Students</a></li>
+												<li><a href="genderidentityYA.html" class="button small">Young Adult Leaders</a></li>
+												<li><a href="genderidentityMS.html" class="button small">Middle School Students</a></li>
 											</ul>
 										</article>
 										<article>
