--- a/drama.html
+++ b/drama.html
@@ -38,13 +38,15 @@
 									<header class="main">
 										<h2>Lesson Plan: Using Performance Art to Inspire Social Change Draft</h2>
 										</header>
+										<h3>Introduction</h3>
+										<p>I thought this section could be used to explain to Stacey why Wakelet might be useful. </p>
+										<hr class="major"/>
+										<h3>Why Use Wakelet?</h3>
+										<p> I used Wakelet to make this nifty toolkit! Stacey Kirby should use Wakelet because so and so! </p>
+										<hr class="major"/>
 										<h3></h3>
 										<iframe class="wakeletEmbed" width="100%" height="760px" src="https://embed.wakelet.com/wakes/cZkL79ART7glEiKFNM8tv/list?border=1" style="border: none" allow="autoplay"></iframe><!-- Please only call https://embed-assets.wakelet.com/wakelet-embed.js once per page --><script src="https://embed-assets.wakelet.com/wakelet-embed.js" charset="UTF-8"></script>
 										<hr class="major"/>
-										<h3>Brief Description of Wakelet</h3>
-										<p>I thought this section could be used to explain to Stacey why Wakelet might be useful. </p>
-										<p> I used Wakelet to make this nifty toolkit! Stacey Kirby should use Wakelet because so and so! </p>
-										<hr class="major" />
 										<h3>Save This Toolkit</h3>
 										<a href="/pdfs/performanceart.pdf">For a PDF version of this toolkit, click here!</a>
 										<hr class="major"/>
