--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 								<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">For the source code the website, <a href="https://github.com/uncgeducationaltoolkit/uncgeducationaltoolkit.github.io">click here.</a>.</p>
+									<p class="copyright">For the source code of the website, <a href="https://github.com/uncgeducationaltoolkit/uncgeducationaltoolkit.github.io">click here.</a></p>
 								</footer>
 
 
